Fix overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,7 @@ html, body {
 body { 
     margin: 0; 
     font-family: 'Poppins', "Helvetica Neue", sans-serif; 
+    overflow: overlay;
 }
 
 h1 {
@@ -60,8 +61,8 @@ h1 {
     }
 }
 
-@media screen and (min-width: 768px) {
+/* @media screen and (min-width: 768px) {
     body {
-        overflow: hidden;
+        overflow-y: overlay;
     }
-}
+} */
